ладно, я уже ближе к цели

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -5,9 +5,6 @@
   line-height: 28px;
   font-style: normal;
   text-decoration: none;
-  margin-left: 18px;
-}
-
-.header__lang-link:hover {
-  text-decoration: underline;
+  margin-top: 18px;
+  margin-bottom: 6px;
 }
