--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,4 +1,19 @@
 .page {
-    font-family: 'Inter', 'Arial', sans-serif ;
-    background: #2A2C2F;
+    width: 100%;
+    margin: 0 auto;
+    font-family: 'Inter', 'Arial', sans-serif;
+    color: #FFFFFF;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+  background: #2A2C2F;
+}
+
+@media screen and (min-width: 1280px) {
+.page {
+  padding: 28px 0;
+}
 }
