--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,12 +1,23 @@
 .place__paragraph {
-    min-width: 484px;
     font-weight: 400;
     font-size: 18px;
     line-height: 29.34px;
+    margin: 0;
 }
+
+.place__paragraph:nth-child(odd) {
+    grid-area: second-paragraph;
+    
+}
+
+.place__paragraph:nth-child(even) {
+    grid-area: first-paragraph;
+}
+
 
 @media screen and (min-width: 1280px) {
     .place__paragraph {
-        
+        min-width: 484px;
+        min-height: 116px;
     }
 }
