--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,6 +3,9 @@
     font-weight: 900;
     font-size: 72px;
     line-height: 76px;
+    margin: 0;
+    grid-area: title;
+    align-self: end;
 }
 
 @media screen and (min-width: 1280px) {
