--- a/blocks/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/place/__website/__url-heading/place__website__url-heading.css
@@ -4,7 +4,10 @@
     font-size: 12px;
     line-height: 20.4px;
     letter-spacing: 2px;
+    align-self: end;
+    color: #AAAAAA;
 }
+
 
 @media screen and (min-width: 1280px) {
     .place__website__url-heading {
