--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,9 +2,35 @@
   color: #FFF;
   font-weight: 400;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 96%;
   font-style: normal;
   text-decoration: none;
-  margin-top: 18px;
-  margin-bottom: 6px;
+}
+
+@media screen and (min-width: 1280px) {
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 96%;
+     }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 96%;
+     }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header__lang-link {
+    font-size: 24px;
+    line-height: 96%;
+     }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header__lang-link {
+    font-size: 18px;
+    line-height: 92%;
+     }
 }
