--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,7 +1,31 @@
 .header__logo {
- width: 176px;
- height: 52px;
- position: absolute;
- top: 0;
- left: 0;
+
+}
+
+@media screen and (min-width: 1280px) {
+    .header__logo {
+        width: 176px;
+        height: 52px;
+       }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .header__logo {
+        width: 176px;
+        height: 52px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .header__logo {
+        width: 176px;
+        height: 52px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__logo {
+        width: 142px;
+        height: 42px;
+       }
 }
