--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,11 +1,35 @@
-@media screen and (min-width: 1280px) {
 .header {
   display: flex;
   flex-direction: row;
-  justify-content: end;
-  width: 1184px;
-  height: 52px;
+  justify-content: space-between;
+  width: 92.5%;
   margin: 0 auto 0;
-  position: relative;
-} 
+}
+
+@media screen and (min-width: 1280px) {
+  .header {
+    min-width: 1184px;
+    min-height: 52px;
+  } 
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .header {
+    min-width: 928px;
+    min-height: 52px;
+  } 
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    min-width: 720px;
+    min-height: 52px;
+  } 
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .header {
+    min-width: 288px;
+    min-height: 42px;
+  } 
 }
