--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,33 @@
 .intro__list {
     list-style-type: none;
-    margin-bottom: 92px;
     margin-top: 0;
     margin-left: 0;
     font-weight: 400;
     font-size: 12px;
     line-height: 18px;
     padding: 0;
+}
+
+@media screen and (min-width:1280px) {
+    .intro__list {
+        margin-bottom: 92px;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .intro__list {
+        margin-bottom: 92px;
+    }  
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro__list {
+        margin-bottom: 88px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .intro__list {
+        margin-bottom: 64px;
+       }
 }
