--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,7 +1,33 @@
 .intro__title {
-    font-size: 54px;
-    line-height: 58px;
     font-weight: 900;
     margin-bottom: 40px;
     margin-left: 0;
+}
+
+@media screen and (min-width:1280px) {
+    .intro__title {
+        font-size: 54px;
+        line-height: 58px;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .intro__title {
+        font-size: 54px;
+        line-height: 58px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .intro__title {
+        font-size: 54px;
+        line-height: 58px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .intro__title {
+        font-size: 32px;
+        line-height: 35px;
+       }
 }
