--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,7 +1,42 @@
 .lead__caption {
-    margin: 8px 0;
+    width: 100%;
     font-weight: 400;
-    font-size: 10px;
-    line-height: 14px;
     letter-spacing: 1.5px;
+    text-transform: uppercase;
+}
+
+@media screen and (min-width:1280px) {
+    .lead__caption {
+        max-width: 984px;
+        margin: 8px auto 0;
+        font-size: 10px;
+        line-height: 14px;
+      }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__caption {
+        max-width: 928px;
+        margin: 8px auto 0;
+        font-size: 10px;
+        line-height: 14px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__caption {
+        max-width: 768px;
+        margin: 8px auto 0 24px;
+        font-size: 10px;
+        line-height: 14px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__caption {
+        max-width: 320px;
+        margin: 8px auto 0 16px;
+        font-size: 10px;
+        line-height: 14px;
+       }
 }
