--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,5 +1,34 @@
 .lead__image {
     width: 100%;
-    max-height: 615px;
     margin: 0;
+    object-fit: cover;
+    align-self: center;
+}
+
+@media screen and (min-width:1280px) {
+    .lead__image {
+        max-width: 984px;
+        max-height: 615px;
+      }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__image {
+        max-width: 928px;
+        max-height: 580px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__image {
+        max-width: 768px;
+        max-height: 480px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__image {
+        max-width: 320px;
+        max-height: 200px;
+       }
 }
