--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,14 +1,45 @@
 .lead__subtitle {
-    max-width: 640px;
-    max-height: 72px;
     text-align: center;
     padding: 0;
-    margin: 32px auto 64px;
     font-weight: 400;
-    font-size: 30px;
-    line-height: 36px;
 }
 
 @media screen and (min-width:1280px) {
-    
+    .lead__subtitle {
+        max-width: 640px;
+        max-height: 72px;
+        font-size: 30px;
+        line-height: 36px;
+        margin: 32px auto 64px;
+      }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__subtitle {
+        max-width: 640px;
+        max-height: 72px;
+        font-size: 30px;
+        line-height: 36px;
+        margin: 32px auto 64px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__subtitle {
+        max-width: 640px;
+        max-height: 72px;
+        font-size: 30px;
+        line-height: 36px;
+        margin: 32px auto 64px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__subtitle {
+        max-width: 288px;
+        max-height: 40px;
+        font-size: 16px;
+        line-height: 20px;
+        margin: 16px auto 40px;
+       }
 }
