--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,12 +1,42 @@
 .lead__title {
     font-weight: 900;
-    font-size: 96px;
-    line-height: 100px;
     text-align: center;
-    margin: 0;
+    margin: 0 auto;
    }
 
 
 @media screen and (min-width:1280px) {
-    
+    .lead__title {
+        max-width: 720px;
+        max-height: 200px;
+        font-size: 96px;
+        line-height: 100px;
+      }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead__title {
+        max-width: 720px;
+        max-height: 200px;
+        font-size: 96px;
+        line-height: 100px;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead__title {
+        max-width: 720px;
+        max-height: 200px;
+        font-size: 96px;
+        line-height: 100px;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead__title {
+        max-width: 288px;
+        max-height: 88px;
+        font-size: 40px;
+        line-height: 44px;
+       }
 }
