--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,7 @@
 .lead {
-  
+    display: flex;
+  justify-content: center;
+  flex-direction: column;
 }
 
 @media screen and (min-width:1280px) {
@@ -8,4 +10,28 @@
         max-height: 1005px;
         margin: 56px auto 0;
     }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .lead {
+        max-width: 928px;
+        max-height: 962px;
+        margin: 48px auto 0;
+       }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .lead {
+        max-width: 928px;
+        max-height: 862px;
+        margin: 48px auto 0;
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .lead {
+        max-width: 928px;
+        max-height: 406px;
+        margin: 48px auto 0;
+       }
 }
