--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -4,8 +4,26 @@
    object-fit: cover;
 }
 
-@media screen and (min-width: 1280px) {
- .photo-grid__item {
-    
- }
+@media screen and (min-width:1280px) {
+   .photo-grid__item {
+      
+   }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+   .photo-grid__item {
+       
+   }  
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+   .photo-grid__item {
+       
+      }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+   .photo-grid__item {
+       
+      }
 }
