--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,6 @@
 .photo-grid {
     display: grid;
     margin: 0 auto 0;
-    
 }
 
 @media screen and (min-width: 1280px) {
@@ -12,6 +11,24 @@
         grid-template-columns: repeat(4, 284px);
         gap: 16px;
     }    
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .photo-grid {
+        
+    }  
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .photo-grid {
+        
+       }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .photo-grid {
+        
+       }
 }
 
 
