--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -4,8 +4,7 @@
   grid-template-areas:
   "title website"
   "margin margin"
-  "image first-paragraph"
-  "image second-paragraph";
+  "image paragraphs";
 }
 
 @media screen and (min-width: 1280px) {
@@ -13,8 +12,41 @@
         min-height: 584px;
         width: 984px;
         margin: 0 auto 80px;
-        grid-template-rows: 152px 48px auto auto;
+        grid-template-rows: 152px 48px auto;
         grid-template-columns: 460px 484px;
         column-gap: 48px;
     }
 }
+  
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place {
+      min-height: 584px;
+      width: 984px;
+      margin: 0 auto 80px;
+      grid-template-rows: 152px 48px auto;
+      grid-template-columns: 460px 484px;
+      column-gap: 48px;
+  }
+  }
+  
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place {
+      min-height: 584px;
+      width: 984px;
+      margin: 0 auto 80px;
+      grid-template-rows: 152px 48px auto;
+      grid-template-columns: 460px 484px;
+      column-gap: 48px;
+  }
+  }
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place {
+      min-height: 584px;
+      width: 984px;
+      margin: 0 auto 80px;
+      grid-template-rows: 152px 48px auto;
+      grid-template-columns: 460px 484px;
+      column-gap: 48px;
+  }
+  }
