--- a/pages/index.css
+++ b/pages/index.css
@@ -3,8 +3,11 @@
 
 @import url("../blocks/page/page.css");
 
+@import url(../blocks/bold/bold.css);
+
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
+@import url("../blocks/header/__langs/header__langs.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
 @import url("../blocks/header/__lang-link/_underline/header__lang-link_underline.css");
 
@@ -27,6 +30,7 @@
 @import url("../blocks/place/place.css");
 @import url("../blocks/place/__image/place__image.css");
 @import url("../blocks/place/__paragraph/place__paragraph.css");
+@import url("../blocks/place/__paragraphs/place__paragraphs.css");
 @import url("../blocks/place/__title/place__title.css");
 @import url("../blocks/place/__website/place__website.css");
 @import url("../blocks/place/__website/__link/place__website__link.css");
