--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,7 +1,8 @@
 .photo-grid__item {
-   width: 284px ;
-   height: 213px;
+   width: 100%;
+   height: 100%;
    object-fit: cover;
+   margin: 0;
 }
 
 @media screen and (min-width:1280px) {
@@ -18,7 +19,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
    .photo-grid__item {
-       
+      
       }
 }
 
