--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,34 @@
 .place__image {
-    width: 460px;
-    height: 460px;
     object-fit: contain;
     grid-area: image;
 }
+
+@media screen and (min-width: 1280px) {
+    .place__image {
+        width: 460px;
+        height: 460px;
+    }
+}
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__image {
+        width: 440px;
+        height: 440px;
+        
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__image {
+        width: 340px;
+        height: 340px;
+        
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__image {
+        width: 320px;
+        height: 320px;
+    }
+ }
