--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,14 +1,36 @@
 .place__paragraph {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 29.34px;
-    margin: 0 0 26px;
 }
 
 
 @media screen and (min-width: 1280px) {
     .place__paragraph {
-        min-width: 484px;
-        min-height: 116px;
+        font-size: 18px;
+        line-height: 29.34px;
+        margin: 0 0 26px;
     }
 }
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__paragraph {
+        font-size: 18px;
+        line-height: 29.34px;
+        margin: 0 0 27px;
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26.08px;
+        margin: 0 0 25px;
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__paragraph {
+        font-size: 16px;
+        line-height: 26.08px;
+        margin: 0 0 25px;
+    }
+ }
