--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,5 +1,30 @@
 .place__paragraphs {
     display: flex;
     flex-direction: column;
-    grid-area: paragraphs;
 }
+
+@media screen and (min-width: 1280px) {
+    .place__paragraphs {
+        grid-area: paragraphs;
+    }
+}
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__paragraphs {
+        grid-area: paragraphs;
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__paragraphs {
+        grid-area: paragraphs;
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__paragraphs {
+        grid-area: paragraphs;
+        max-width: 288px;
+        margin-left: 16px;
+    }
+ }
