--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,15 +1,42 @@
 .place__title {
-    min-width: 460px;
     font-weight: 900;
-    font-size: 72px;
-    line-height: 76px;
     margin: 0;
-    grid-area: title;
     align-self: end;
 }
 
 @media screen and (min-width: 1280px) {
     .place__title {
-        
+      grid-area: title;
+      min-width: 460px;
+      font-size: 72px;
+      line-height: 76px;
     }
 }
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__title {
+        grid-area: title;
+        min-width: 440px;
+        font-size: 72px;
+        line-height: 76px;
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__title {
+        grid-area: title;
+        min-width: 340px;
+        font-size: 42px;
+        line-height: 46px;
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__title {
+        grid-area: title;
+        max-width: 288px;
+        margin-left: 16px;
+        font-size: 32px;
+        line-height: 35px;
+    }
+ }
