--- a/blocks/place/__website/__link/place__website__link.css
+++ b/blocks/place/__website/__link/place__website__link.css
@@ -13,6 +13,22 @@
 
 @media screen and (min-width: 1280px) {
     .place__website__link {
-        
     }
 }
+
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__website__link {
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__website__link {
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__website__link {
+        width: 100%;
+    }
+ }
