--- a/blocks/place/__website/__url-heading/place__website__url-heading.css
+++ b/blocks/place/__website/__url-heading/place__website__url-heading.css
@@ -1,16 +1,34 @@
 .place__website__url-heading {
-    min-width: 456px;
+    width: 100%;
     font-weight: 400;
     font-size: 12px;
     line-height: 20.4px;
     letter-spacing: 2px;
-    align-self: end;
     color: #AAAAAA;
 }
 
 
 @media screen and (min-width: 1280px) {
     .place__website__url-heading {
-        
+        align-self: end;
     }
 }
+
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__website__url-heading {
+        align-self: end;
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__website__url-heading {
+        align-self: end;
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__website__url-heading {
+        width: 100%;
+    }
+ }
