--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,10 +1,35 @@
 .place__website {
-    grid-area: website;
-    align-self: end;
+    
 }
 
 @media screen and (min-width: 1280px) {
     .place__website {
-        
+        grid-area: website;
+        align-self: end;
     }
 }
+ 
+ @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .place__website {
+        grid-area: website;
+        align-self: end;
+    }  
+ }
+ 
+ @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .place__website {
+        grid-area: website;
+        align-self: end;
+    }
+ }
+ 
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    .place__website {
+        grid-area: website;
+        max-width: 288px;
+        margin-left: 16px;
+        min-height: 46px; 
+        display: flex;
+        flex-direction: column;
+    }
+ }
