--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,15 +1,41 @@
 .cover__subtitle {
     font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
     text-align: center;
-    margin: 32px 0 0;
     z-index: 10;
 }
 
 @media screen and (min-width: 1280px) {
     .cover__subtitle {
-        width: 360px;
-        height: 66px;
+      max-width: 360px;
+      font-size: 18px;
+      line-height: 22px;
+      margin: 32px 0 0;
     }
 }
+
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .cover__subtitle {
+        max-width: 360px;
+        font-size: 18px;
+        line-height: 22px;
+        margin: 32px 0 0;
+  }
+}
+  
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover__subtitle {
+        max-width: 360px;
+        font-size: 18px;
+        line-height: 22px;
+        margin: 32px 0 0;
+  }
+}
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+      .cover__subtitle {
+        max-width: 288px;
+        font-size: 14px;
+        line-height: 16px;
+        margin: 16px 0 0;
+        }
+  }
