--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,7 +1,5 @@
 .cover__title {
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
   text-align: center;
   margin: 0;
   z-index: 10;
@@ -9,7 +7,33 @@
 
 @media screen and (min-width: 1280px) {
     .cover__title {
-        width: 560px;
-        height: 152px;
+      max-width: 560px;
+      font-size: 72px;
+      line-height: 76px;
     }
 }
+
+  
+  @media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .cover__title {
+      max-width: 560px;
+      font-size: 72px;
+      line-height: 76px;
+  }
+}
+  
+  @media screen and (min-width: 768px) and (max-width: 1023px) {
+    .cover__title {
+      max-width: 560px;
+      font-size: 72px;
+      line-height: 76px;
+  }
+}
+  
+  @media screen and (min-width: 320px) and (max-width: 767px) {
+      .cover__title {
+        max-width: 288px;
+        font-size: 32px;
+        line-height: 35px;
+        }
+  }
