--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,8 +8,32 @@
 
 @media screen and (min-width: 1280px) {
     .cover {
-        width: 1184px;
-        height: 740px;
+        max-width: 1184px;
+        min-height: 740px;
         margin: 0 auto 92px;
     }
 }
+    
+    @media screen and (min-width: 1024px) and (max-width: 1279px) {
+      .cover {
+        width: 100%;
+        min-height: 640px;
+        margin: 0 auto 92px;
+    }
+}
+    
+    @media screen and (min-width: 768px) and (max-width: 1023px) {
+      .cover {
+        width: 100%;
+        min-height: 480px;
+        margin: 0 auto 88px;
+    }
+}
+    
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+        .cover {
+            width: 100%;
+            min-height: 200px;
+            margin: 0 auto 64px;
+          }
+    }
