--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,16 +1,45 @@
 .footer__copyright {
     color: #FFFFFF;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    align-self: center;
-    position: absolute;
-    right: 0;
 }
+
 
 @media screen and (min-width:1280px) {
     .footer__copyright {
-        width: 186px;
-        height: 16px;
+        margin: 0 0 0 auto;
+        max-width: 186px;
+        font-size: 14px;
+        line-height: 16px;
+        align-self: center;
+    }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .footer__copyright {
+        margin: 0 0 0 auto;
+        max-width: 186px;
+        font-size: 14px;
+        line-height: 16px;
+        align-self: center;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .footer__copyright {
+        margin: 0 0 0 auto;
+        max-width: 186px;
+        font-size: 14px;
+        line-height: 16px;
+        align-self: center;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__copyright {
+        margin: 16px 0 0 0;
+        max-width: 186px;
+        font-size: 14px;
+        line-height: 14px;
+        justify-self: start;
     }
 }
