--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -2,8 +2,6 @@
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 400;
-    font-size: 16px;
-    line-height: 18px;
     justify-self: start;
     transition: opacity 0.5s;
 }
@@ -16,5 +14,34 @@
       .footer__link {
           min-width: 50px;
           margin: 0 18px 0 0;
+          font-size: 16px;
+          line-height: 18px;
       }
   }
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+    .footer__link {
+        min-width: 50px;
+        margin: 0 18px 0 0;
+        font-size: 16px;
+        line-height: 18px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    .footer__link {
+        min-width: 50px;
+        margin: 0 18px 0 0;
+        font-size: 16px;
+        line-height: 18px;
+    }
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .footer__link {
+        min-width: 74px;
+        margin: 0 0 32px 0;
+        font-size: 24px;
+        line-height: 24px;
+    }
+}
