--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,13 +1,39 @@
 .footer {
   display: flex;
-  flex-direction: row;
-  position: relative;
 }
 
 @media screen and (min-width:1280px) {
     .footer {
-        width: 1184px;
-        height: 18px;
-        margin: 0 auto 0;
+      max-width: 1184px;
+      max-height: 18px;
+      margin: 0 auto 0;
+      flex-direction: row;
     }
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .footer {
+    max-width: 928px;
+    max-height: 18px;
+    margin: 0 auto 0;
+    flex-direction: row;
+}
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    max-width: 720px;
+    max-height: 18px;
+    margin: 0 auto 0;
+    flex-direction: row;
+}
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+  .footer {
+    max-width: 288px;
+    max-height: 310px;
+    margin: 0 auto 0 16px;
+    flex-direction: column;
+}
 }
