--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,30 +1,32 @@
 .photo-grid__item {
-   width: 100%;
-   height: 100%;
    object-fit: cover;
    margin: 0;
 }
 
 @media screen and (min-width:1280px) {
    .photo-grid__item {
-      
+      max-width: 284px;
+      min-height: 213px;
    }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
    .photo-grid__item {
-       
+      max-width: 300px;
+      min-height: 225px;
    }  
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
    .photo-grid__item {
-      
+      max-width: 352px;
+      min-height: 254px;
       }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
    .photo-grid__item {
-       
+      max-width: 288px;
+      min-height: 216px;
       }
 }
