надеюсь это конец

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -8,8 +8,7 @@
 
 @media screen and (min-width:1280px) {
     .lead__caption {
-        max-width: 984px;
-        margin: 8px auto 0;
+        margin: 0;
         font-size: 10px;
         line-height: 14px;
     }
@@ -18,8 +17,7 @@
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .lead__caption {
-        max-width: 928px;
-        margin: 8px auto 0;
+        margin: 0;
         font-size: 10px;
         line-height: 14px;
     }
@@ -28,8 +26,7 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .lead__caption {
-        max-width: 768px;
-        margin: 8px auto 0 24px;
+        margin: 0 0 0 24px;
         font-size: 10px;
         line-height: 14px;
     }
@@ -38,8 +35,7 @@
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__caption {
-        max-width: 320px;
-        margin: 8px auto 0 16px;
+        margin: 0 0 0 16px;
         font-size: 10px;
         line-height: 14px;
     }
