--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -40,7 +40,7 @@
  @media screen and (min-width: 320px) and (max-width: 767px) {
     .places {
         min-height: 5177px;
-        min-width: 320px;
+        max-width: 320px;
         margin: 64px auto 41px;
     }
 }
