--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -1,4 +1,4 @@
-.place__website__link {
+.place__website_link {
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
@@ -7,28 +7,25 @@
     transition: opacity 0.5s;
 }
 
-.place__website__link:hover {
+.place__website_link:hover {
     opacity: 30%;
 }
 
 @media screen and (min-width: 1280px) {
-    .place__website__link {
-    }
+    .place__website_link {}
 }
 
  
  @media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .place__website__link {
-    }  
+    .place__website_link {}  
  }
  
  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place__website__link {
-    }
+    .place__website_link {}
  }
  
  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .place__website__link {
+    .place__website_link {
         width: 100%;
     }
  }
