--- a/blocks/place/__website-link/place__website-link.css
+++ b/blocks/place/__website-link/place__website-link.css
@@ -1,4 +1,4 @@
-.place__website_link {
+.place__website-link {
     font-weight: 400;
     font-size: 18px;
     line-height: 22px;
@@ -7,25 +7,25 @@
     transition: opacity 0.5s;
 }
 
-.place__website_link:hover {
+.place__website-link:hover {
     opacity: 30%;
 }
 
 @media screen and (min-width: 1280px) {
-    .place__website_link {}
+    .place__website-link {}
 }
 
  
  @media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .place__website_link {}  
+    .place__website-link {}  
  }
  
  @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place__website_link {}
+    .place__website-link {}
  }
  
  @media screen and (min-width: 320px) and (max-width: 767px) {
-    .place__website_link {
+    .place__website-link {
         width: 100%;
     }
  }
