--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -1,7 +1,9 @@
 .cover__background {
+    position: absolute;
+    right: 0;
+    top: 0;
+    background-size: cover;
     width: 100%;
     height: 100%;
-    z-index: 0;
-    background-size: cover;
-    position: absolute;
 }
+
