--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,14 +1,44 @@
 .cover__overlay {
-    position: absolute;
-    z-index: 5;
-    color: #2A2C2F;
-    opacity: 70%;
+    position: relative;
+    z-index: 10;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100%;
+    text-decoration: none;
+    color: #FFFFFF;
+    background-color: #2A2C2F;
+    opacity: 30%;
     transition: opacity 0.5s;
 }
 
 .cover__overlay:hover {
-    opacity: 30%;
-    cursor: pointer;
+    opacity: 80%;
+}
+
+@media screen and (min-width: 1280px) {
+    .cover__overlay {
+        min-height: 740px;
+    }
+}
+    
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+      .cover__overlay {
+        min-height: 640px;
+    }
+}
+    
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+      .cover__overlay {
+        min-height: 480px;
+        margin-bottom: 88px;
+    }
+}
+    
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .cover__overlay {
+        min-height: 200px;
+        margin-bottom: 64px;
+    }
 }
