--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,48 +1,18 @@
 .footer__copyright {
     color: #FFFFFF;
     font-weight: 400;
+    margin: 0 0 0 auto;
+    max-width: 186px;
+    font-size: 14px;
+    line-height: 16px;
+    align-self: center;
 }
-
-
-@media screen and (min-width:1280px) {
-    .footer__copyright {
-        margin: 0 0 0 auto;
-        max-width: 186px;
-        font-size: 14px;
-        line-height: 16px;
-        align-self: center;
-    }
-}
-
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .footer__copyright {
-        margin: 0 0 0 auto;
-        max-width: 186px;
-        font-size: 14px;
-        line-height: 16px;
-        align-self: center;
-    }
-}
-
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .footer__copyright {
-        margin: 0 0 0 auto;
-        max-width: 186px;
-        font-size: 14px;
-        line-height: 16px;
-        align-self: center;
-    }
-}
-
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .footer__copyright {
         margin: 16px 0 0 0;
-        max-width: 186px;
         font-size: 14px;
         line-height: 14px;
-        justify-self: start;
+        align-self: flex-start;
     }
 }
