--- a/blocks/header/__langs/header__langs.css
+++ b/blocks/header/__langs/header__langs.css
@@ -1,6 +1,15 @@
 .header__langs {
+    height: min-content;
     display: flex;
     flex-direction: row;
-    margin: 0;
-    align-items: center;
+    margin: 18px 0 6px;
+    align-items: flex-end;
+    padding: 0;
+    list-style-type: none;
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
+    .header__langs {
+        margin: 14px 0 8px;
+    } 
 }
