--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,38 +2,35 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  width: 92.5%;
   margin: 0 auto 0;
+  min-height: 52px;
 }
 
 
 @media screen and (min-width: 1280px) {
   .header {
-    min-width: 1184px;
-    min-height: 52px;
+    max-width: 1184px;
   } 
 }
 
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .header {
-    min-width: 928px;
-    min-height: 52px;
+    max-width: 928px;
   } 
 }
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .header {
-    min-width: 720px;
-    min-height: 52px;
+    max-width: 720px;
   } 
 }
 
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .header {
-    min-width: 288px;
+    max-width: 288px;
     min-height: 42px;
   } 
 }
