--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,40 +3,21 @@
     font-weight: 400;
     letter-spacing: 1.5px;
     text-transform: uppercase;
-}
-
-
-@media screen and (min-width:1280px) {
-    .lead__caption {
-        margin: 0;
-        font-size: 10px;
-        line-height: 14px;
-    }
-}
-
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .lead__caption {
-        margin: 0;
-        font-size: 10px;
-        line-height: 14px;
-    }
+    margin: 8px 0 0;
+    font-size: 10px;
+    line-height: 14px;
 }
 
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .lead__caption {
-        margin: 0 0 0 24px;
-        font-size: 10px;
-        line-height: 14px;
+        margin-left: 24px;
     }
 }
 
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__caption {
-        margin: 0 0 0 16px;
-        font-size: 10px;
-        line-height: 14px;
+        margin-left: 16px;
     }
 }
