--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -7,28 +7,24 @@
 
 @media screen and (min-width:1280px) {
     .lead__image {
-        max-width: 984px;
-        max-height: 615px;
+        min-width: 984px;
     }
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .lead__image {
-        max-width: 928px;
-        max-height: 580px;
+        min-width: 928px;
     }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     .lead__image {
-        max-width: 768px;
-        max-height: 480px;
+        min-width: 768px;
     }
 }
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
     .lead__image {
-        max-width: 320px;
-        max-height: 200px;
+        min-width: 320px;
     }
 }
