--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,41 +1,23 @@
 .lead {
-    display: flex;
+  width: min-content;
+  display: flex;
   justify-content: center;
   flex-direction: column;
+  max-width: 928px;
+  margin: 48px auto 0;
 }
 
 
 @media screen and (min-width:1280px) {
     .lead {
-        max-width: 984px;
-        max-height: 1005px;
-        margin: 56px auto 0;
+        min-width: 984px;
+        margin-top: 56px;
     }
 }
 
-
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
     .lead {
-        max-width: 928px;
-        max-height: 962px;
-        margin: 48px auto 0;
-       }
+        min-width: 928px;
+    }
 }
 
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-    .lead {
-        max-width: 928px;
-        max-height: 862px;
-        margin: 48px auto 0;
-       }
-}
-
-
-@media screen and (min-width: 320px) and (max-width: 767px) {
-    .lead {
-        max-width: 928px;
-        max-height: 406px;
-        margin: 48px auto 0;
-       }
-}
