--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,5 +1,6 @@
 .page {
   width: 100%;
+  overflow-x: hidden;
   margin: 0 auto;
   font-family: 'Inter', 'Arial', sans-serif;
   color: #FFFFFF;
@@ -10,33 +11,11 @@
   -moz-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
   background: #2A2C2F;
-  overflow: hidden;
-}
-
-
-@media screen and (min-width: 1280px) {
-.page {
   padding: 28px 0 24px;
 }
-}
-
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .page {
-    padding: 28px 0 24px;
-}
-}
-
-
-@media screen and (min-width: 768px) and (max-width: 1023px) {
-  .page {
-    padding: 28px 0 24px;
-}
-}
-
 
 @media screen and (min-width: 320px) and (max-width: 767px) {
   .page {
-    padding: 16px 0 24px;
+    padding-top: 16px;
 }
 }
