--- a/blocks/place/__paragraphs/place__paragraphs.css
+++ b/blocks/place/__paragraphs/place__paragraphs.css
@@ -1,30 +1,31 @@
 .place__paragraphs {
     display: flex;
     flex-direction: column;
+    grid-area: paragraphs;
 }
-
+ 
 @media screen and (min-width: 1280px) {
     .place__paragraphs {
-        grid-area: paragraphs;
+        min-width: 484px;
     }
 }
  
- @media screen and (min-width: 1024px) and (max-width: 1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
     .place__paragraphs {
-        grid-area: paragraphs;
+        min-width: 456px;
     }  
- }
- 
- @media screen and (min-width: 768px) and (max-width: 1023px) {
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
     .place__paragraphs {
-        grid-area: paragraphs;
-    }
- }
- 
- @media screen and (min-width: 320px) and (max-width: 767px) {
+        min-width: 352px;
+    }  
+}
+
+@media screen and (min-width: 320px) and (max-width: 767px) {
     .place__paragraphs {
-        grid-area: paragraphs;
         max-width: 288px;
         margin-left: 16px;
+        margin-bottom: 25px;
     }
- }
+}
