--- a/blocks/place/__website-url-heading/place__website-url-heading.css
+++ b/blocks/place/__website-url-heading/place__website-url-heading.css
@@ -5,30 +5,6 @@
     line-height: 20.4px;
     letter-spacing: 2px;
     color: #AAAAAA;
+    margin: 0 0 12px;
+    text-transform: uppercase;
 }
-
-
-@media screen and (min-width: 1280px) {
-    .place__website-url-heading {
-        align-self: end;
-    }
-}
-
- 
- @media screen and (min-width: 1024px) and (max-width: 1279px) {
-    .place__website-url-heading {
-        align-self: end;
-    }  
- }
- 
- @media screen and (min-width: 768px) and (max-width: 1023px) {
-    .place__website-url-heading {
-        align-self: end;
-    }
- }
- 
- @media screen and (min-width: 320px) and (max-width: 767px) {
-    .place__website-url-heading {
-        width: 100%;
-    }
- }
