--- a/pages/index.css
+++ b/pages/index.css
@@ -1,19 +1,16 @@
 @import url(../vendor/normalize.css);
-@import url(../vendor/fonts/InterWeb/inter.css);
+@import url(../vendor/fonts/inter.css);
 
 @import url("../blocks/page/page.css");
-
-@import url(../blocks/bold/bold.css);
 
 @import url("../blocks/header/header.css");
 @import url("../blocks/header/__logo/header__logo.css");
 @import url("../blocks/header/__langs/header__langs.css");
 @import url("../blocks/header/__lang-link/header__lang-link.css");
-@import url("../blocks/header/__lang-underline/header__lang-underline.css");
+@import url("../blocks/header/__lang-link_active/header__lang-link_active.css");
 
 @import url("../blocks/lead/lead.css");
 @import url("../blocks/lead/__caption/lead__caption.css");
-@import url("../blocks/lead/__caption-place/lead__caption-place.css");
 @import url("../blocks/lead/__image/lead__image.css");
 @import url("../blocks/lead/__subtitle/lead__subtitle.css");
 @import url("../blocks/lead/__title/lead__title.css");
@@ -22,6 +19,7 @@
 @import url("../blocks/intro/__list/intro__list.css");
 @import url("../blocks/intro/__text/intro__text.css");
 @import url("../blocks/intro/__title/intro__title.css");
+@import url("../blocks/intro/__bold/intro__bold.css");
 
 @import url("../blocks/photo-grid/photo-grid.css");
 @import url("../blocks/photo-grid/__item/photo-grid__item.css");
